--- a/fril/public/stylesheets/mapStyle.css
+++ b/fril/public/stylesheets/mapStyle.css
@@ -33,15 +33,22 @@
 
 #optionsContainer {
 	position: absolute;
-	top: 80px;
+	top: 66px;
     left: 8px;
     z-index: 2;
     width: 31px;
 }
 
+@media only screen and (max-width: 500px) {
+	#optionsContainer {
+		top: 5.2em;
+    	width: 2.45em;
+    }
+}
+
 #filterContainer, #polygonFilterContainer {
 	position: absolute;
-    top: 80px;
+    top: 66px;
     left: 42px;
 	width: 180px;
 	z-index: 3;
@@ -50,11 +57,18 @@
 
 #spatialSearchContainer {
 	position: absolute;
-    top: 80px;
+    top: 66px;
     left: 42px;
 	width: 220px;
 	z-index: 3;
 	padding: 5px;
+}
+
+@media only screen and (max-width: 500px) {
+	#filterContainer, #polygonFilterContainer, #spatialSearchContainer {
+		top: 5.2em;
+    	left: 50px;
+    }
 }
 
 #featureInfoContainer, #polygonInfoContainer {
